--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Face detection demo</title>
+  <title>Scanned Photo demo</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 
@@ -10,11 +10,11 @@
 
 <div class = "container">
     <div class = "starter-template">
-        <h1>Face detection example</h1>
-        <p class = "lead"> Try uploading an image to see if a face is detected </p>
-        <p> Face detection using <a href="https://docs.opencv.org/2.4/modules/objdetect/doc/cascade_classification.html" target="blank"> Cascade Classification </a> | Powered by Python, Flask, OpenCV </p>
+        <h1>Photo scan detector example</h1>
+        <p class = "lead"> Try uploading an image to see if your scans are detected </p>
+        <p> Detection using <a href="https://docs.opencv.org/2.4/modules/objdetect/doc/cascade_classification.html" target="blank"> Cascade Classification </a> | Powered by Python, Flask, OpenCV </p>
         <p> Image size limit: 2 MB </p>
-        <p> By Jerome Vonk - May, 2018 </p>
+        <p> By Tucker Bendix - July, 2022 </p>
     </div>
 </div>
 
